--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "prod": "NODE_ENV=production webpack server --open --config webpack.prod.mjs",
     "dev": "NODE_ENV=development webpack server --open --config webpack.dev.mjs",
     "build": "NODE_ENV=production webpack --config webpack.prod.mjs",
-    "build-dev": "NODE_ENV=development BRANCH_NAME=$BRANCH_NAME webpack --config webpack.dev.mjs",
+    "build-dev": "NODE_ENV=development webpack --config webpack.dev.mjs",
+    "build-dev-feature": "NODE_ENV=development BRANCH_NAME=$BRANCH_NAME webpack --config webpack.dev.mjs",
     "build-storybook": "storybook build",
     "storybook": "storybook dev -p 6006",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
