chore: side effects 설정 추가

--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "type": "module",
+  "sideEffects": [
+    "cypress/**/*",
+    "*.cy.ts",
+    "*.cy.js",
+    "*.spec.ts",
+    "*.spec.js"
+  ],
   "scripts": {
     "prod": "NODE_ENV=production webpack server --open --config webpack.prod.mjs",
     "dev": "NODE_ENV=development webpack server --open --config webpack.dev.mjs",
